force-app/main/default/objects/copadoccmint__Theme_Mapping__c/copadoccmint__Theme_Mapping__c.object-meta.xml
<CustomObject>
    <label>Theme Mapping</label>
    <nameField>
        <displayFormat>TH-{000000}</displayFormat>
        <label>Theme Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Theme Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>