force-app/main/default/objects/copadoccmint__Theme_Mapping__c/fields/copadoccmint__Project__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>copado__Project__c</referenceTo>
    <relationshipLabel>Theme Mappings</relationshipLabel>
    <relationshipName>Theme_Mappings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>