force-app/main/default/objects/copadoccmint__Theme_Mapping__c/fields/copadoccmint__TP_Theme_Name__c.field-meta.xml
<CustomField>
    <fullName>copadoccmint__TP_Theme_Name__c</fullName>
    <label>TP Theme Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>